# xorg-xcursorgen

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  xcursorgen.c  xcursorgen.man
